// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fixup() a namespace with shorthand runs through fixups too 1`] = `
Array [
  Array [
    Object {
      "after": 1,
      "before": 2,
      "messages": Array [
        "must be 1, was 2",
      ],
      "path": "a.a",
    },
    [Function],
  ],
]
`;

exports[`fixup() if fixup fails it errors gracefully 1`] = `
"Fixup for \\"path\\" failed while running on value '' 
Unexpected error!"
`;

exports[`fixup() when onFixup handler can receive no messages if a fixup did not provide any 1`] = `
Array [
  Array [
    Object {
      "after": "fixed",
      "before": "foo",
      "messages": undefined,
      "path": "a",
    },
    [Function],
  ],
]
`;

exports[`fixup() when onFixup handler is set it can call the original handler to retain the original base behaviour 1`] = `
Array [
  Array [
    "{\\"event\\":\\"One of your setting values was invalid. We were able to automaticlaly fix it up now but please update your code.\\",\\"level\\":4,\\"path\\":[\\"setset\\"],\\"context\\":{\\"before\\":\\"foo\\",\\"after\\":\\"fixed\\",\\"path\\":\\"a\\",\\"messages\\":[\\"...\\"]}}
",
  ],
]
`;

exports[`fixup() when onFixup handler is set then called when fixup fixes something 1`] = `
Array [
  Array [
    Object {
      "after": "/foo",
      "before": "foo",
      "messages": Array [
        "must have leading slash",
      ],
      "path": "path",
    },
    [Function],
  ],
]
`;

exports[`fixup() when onFixup handler not set and no messages provided then default is to do nothing 1`] = `Array []`;

exports[`fixup() when onFixup handler not set then defualt is to log a warning 1`] = `
Array [
  Array [
    "{\\"event\\":\\"One of your setting values was invalid. We were able to automaticlaly fix it up now but please update your code.\\",\\"level\\":4,\\"path\\":[\\"setset\\"],\\"context\\":{\\"before\\":\\"foo\\",\\"after\\":\\"fixed\\",\\"path\\":\\"a\\",\\"messages\\":[\\"...\\"]}}
",
  ],
]
`;

exports[`initial() throws an error gracefully upon an unexpected error 1`] = `
"There was an unexpected error while running the initializer for setting \\"a\\" 
Unexpected error while trying to initialize setting"
`;

exports[`initial() throws an error when not assigned a function 1`] = `"Initializer for setting \\"a\\" was configured with a static value. It must be a function. Got: 1"`;

exports[`validate() if a setting fails validation then an error is thrown with structured metadata attached 1`] = `
[Error: Your setting "a" failed validation with value 'bar':

- Too long
- Too simple]
`;

exports[`validate() unexpected validator failures error gracefully 1`] = `
[Error: Validation for "a" unexpectedly failed while running on value 'bar' 
Unexpected error while trying to validate]
`;

exports[`validate() unexpected validator failures error gracefully 2`] = `
Object {
  "path": Array [
    "__root__",
    "a",
  ],
}
`;

exports[`validate() unexpected validator failures error gracefully 3`] = `"bar"`;
